# Forecasting-Switzerland-Electricity-Load

./: README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/processed/: swiss_load_full.parquet
data/processed/models/: best_lstm_24h.pt
data/raw/: swiss_load_full.parquet
data/raw/entsoe/: swiss_load_2020.parquet  swiss_load_2021.parquet  swiss_load_2022.parquet  swiss_load_2023.parquet  swiss_load_2024.parquet  swiss_load_2025.parquet  swiss_load_2026.parquet
data/raw/weather_historical/: year=2019.parquet  year=2020.parquet  year=2021.parquet  year=2022.parquet  year=2023.parquet  year=2024.parquet  year=2025.parquet  year=2026.parquet
data/raw/weather_historical_forecast_daily/: year=2019.parquet  year=2020.parquet  year=2021.parquet  year=2022.parquet  year=2023.parquet  year=2024.parquet  year=2025.parquet  year=2026.parquet
data/raw_xml/: swiss_load_2020.xml  swiss_load_2021.xml  swiss_load_2022.xml  swiss_load_2023.xml  swiss_load_2024.xml  swiss_load_2025.xml  swiss_load_2026.xml
data/state/: entsoe_state.json  openmeteo_historical_forecast_state.json  openmeteo_state.json
notebook/: EDA.ipynb
src/: EDA.ipynb  config.ipynb  raw.ipynb  raw2.ipynb  raw3.ipynb  settings.py  test.ipynb  toparquet.ipynb
src/ingestion/: __init__.py  entsoe.py  openmeteo.py  settings.py  state_utils.py
src/modeling/: __init__.py  inference.py  lstm_pipeline.py  train.ipynb  train_lstm.py
src/processing/: __init__.py  features.py  helpers.py  processing.ipynb  processing.py
src/validation/: __init__.py  core.py  data_checks.py
(+32 files in other folders)
