[project]
name = "load-forecasting"
version = "0.1.0"
description = ""
authors = [
    {name = "David Alvarez",email = "vigocpc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12 <3.13"
dependencies = [
    "meteodata-lab[polytope,regrid] (>=0.6.0,<0.7.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.13.2,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "asyncio (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false 
